fix: update Ukrainian translation

--- a/lang/uk.json
+++ b/lang/uk.json
@@ -99,7 +99,7 @@
       "Attune": "Коли ви <strong>Фокусуєтесь</strong>, ви відкриваєте свій розум до примарного поля або проводите електроплазматичну енергію через своє тіло. <em>Ви можете спілкуватися з примарою або зрозуміти аспекти спектрології. Ви можете спробувати побачити щось поза межами звичайного зору, щоб краще зрозуміти ситуацію (але Розвідка може бути кращою).</em>",
       "Command": "Коли ви <strong>Наказуєте</strong>, ви змушуєте до швидкого підкорення. <em>Ви можете залякати або пригрозити, щоб отримати бажане. Ви можете очолити банду в груповій дії. Ви можете спробувати командувати людьми, щоб переконати їх (але Спілкування може бути кращим).</em>",
       "Consort": "Коли ви <strong>Спілкуєтесь</strong>, ви взаємодієте з друзями та контактами. <em>Ви можете отримати доступ до ресурсів, інформації, людей або місць. Ви можете справити хороше враження або переконати когось своїм шармом і стилем. Ви можете знайти нових друзів або встановити зв'язок зі своїм походженням чи передісторією. Ви можете спробувати впливати на друзів соціальним тиском (але Наказування може бути кращим).</em>",
-      "Finesse": "Коли ви <strong>Вправляєтесь</strong>, ви використовуєте спритність або тонкі відволікання. <em>Ви можете залізти до кишені комусь. Ви можете керувати транспортом або конем. Ви можете вести формальний поєдинок за допомогою витонченого бойового мистецтва. Ви можете спробувати застосувати це мистецтво в хаотичній сутичці (але Бійка може бути кращою). Ви можете спробувати відкрити замок (але Майстрування може бути кращим).</em>",
+      "Finesse": "Коли ви застосовуєте <strong>Вправність</strong>, ви використовуєте спритність або тонкі відволікання. <em>Ви можете залізти до кишені комусь. Ви можете керувати транспортом або конем. Ви можете вести формальний поєдинок за допомогою витонченого бойового мистецтва. Ви можете спробувати застосувати це мистецтво в хаотичній сутичці (але Бійка може бути кращою). Ви можете спробувати відкрити замок (але Майстрування може бути кращим).</em>",
       "Hunt": "Коли ви <strong>Полюєте</strong>, ви ретельно відстежуєте ціль. <em>Ви можете переслідувати людину або дізнатися її місцезнаходження. Ви можете організувати засідку. Ви можете атакувати з точним пострілом здалеку. Ви можете спробувати застосувати зброю в ближньому бою (але Бійка може бути кращою).</em>",
       "Prowl": "Коли ви <strong>Скрадаєтесь</strong>, ви майстерно й тихо пересуваєтесь. <em>Ви можете проскочити повз охоронця або сховатися в тіні. Ви можете бігати й стрибати по дахах. Ви можете атакувати когось із засідки ножем у спину або кийком. Ви можете спробувати зловити жертву зненацька під час бою (але Бійка може бути кращою).</em>",
       "Skirmish": "Коли ви <strong>Б'єтесь</strong>, ви вступаєте в ближній бій із супротивником, щоб він не зміг легко втекти. <em>Ви можете боротися або захоплювати їх. Ви можете рубати й різати. Ви можете зайняти або утримати позицію в бою. Ви можете спробувати вести формальний поєдинок (але Вправність може бути кращою).</em>",
@@ -285,12 +285,12 @@
         "Extreme": "Екстремальний"
       },
       "EffectDescription": {
-        "Title": "Опис ефекту",
-        "Zero": "Ця дія має слабкий, незначний або навіть нульовий ефект.",
-        "Limited": "Ви досягаєте часткового або слабкого ефекту.",
-        "Standard": "Ви досягаєте того, що можна вважати нормальним.",
-        "Great": "Ви досягаєте більшого, ніж зазвичай.",
-        "Extreme": "Екстремальний ефект!"
+        "Title": "Ефект",
+        "Zero": "Ця дія має слабкий, незначний або навіть нульовий ефект. 0 відміток",
+        "Limited": "Ви досягаєте часткового або слабкого ефекту. Як саме ваш вплив зменшується? Яких зусиль ще треба докласти, щоб досягти мети? 1 відмітка",
+        "Standard": "Ви досягаєте того, що можна очікувати як «нормальний» результат для цієї дії. Чи цього достатньо, чи ще є що робити? 2 відмітки",
+        "Great": "Ви досягаєте більшого, ніж зазвичай. Як проявляється додаткова робота? Які додаткові переваги ви отримуєте? 3 відмітки",
+        "Extreme": "Екстремальний ефект! 5 відміток"
       },
       "Bonus": {
         "or": "або",
@@ -307,7 +307,7 @@
       },
       "SufferTrauma": {
         "Title": "Отримати травму",
-        "Description": "Ви отримуєте {stress} стресу, тож отримуєте рівень <b>травми</b>. Ви <i>залишені вмирати</i> або іншим чином випадаєте з поточного конфлікту, лише щоб повернутися пізніше, виснажені та розбиті."
+        "Description": "Ви отримуєте {stress} стресу, тому страждаєте від отриманої <b>травми</b>. Вас <i>залишають на смерть</i> або ви іншим чином вибуваєте з поточного конфлікту, щоб повернутися пізніше, спустошеним і розгубленим. Коли ви повертаєтеся, у вас <b>нуль стресу</b>, і ваш порок буде задоволений під час наступного перепочинку (див. <b>Порок</b> на сторінці 156)."
       },
       "Result": {
         "Exp": "{actor} отримує 1 досвід у {attribute}",
@@ -319,21 +319,21 @@
       "Action": {
         "Controlled": {
           "Critical": "Ви робите це з <strong>посиленим ефектом</strong>.",
-          "Success": "Ви робите це.",
-          "Mixed": "Ви вагаєтесь. Відступіть і спробуйте інший підхід або зробіть це з незначним наслідком: виникає незначне <strong>ускладнення</strong>.",
-          "Fail": "Ви спіткнулися. Натисніть, щоб захопити <strong>ризиковану</strong> можливість, або відступіть."
+          "Success": "Ви це робите.",
+          "Mixed": "Ви вагаєтесь. Відійдіть і спробуйте інший підхід, або ж зробіть це з незначним наслідком: відбувається незначне <strong>ускладнення</strong>, ви маєте <strong>послаблений ефект</strong>, ви отримуєте <strong>незначне поранення</strong>, або опиняєтесь у <strong>ризикованих</strong> обставинах.",
+          "Fail": "Ви вагатись. Продовжуйте, скориставшись <strong>ризикованою</strong> можливістю, або відійдіть і спробуйте інший підхід."
         },
         "Risky": {
           "Critical": "Ви робите це з <strong>посиленим ефектом</strong>.",
-          "Success": "Ви робите це.",
-          "Mixed": "Ви це робите, але виникає наслідок: ви отримуєте <strong>поранення</strong> або <strong>ускладнення</strong>.",
-          "Fail": "Все йде погано."
+          "Success": "Ви це робите.",
+          "Mixed": "Ви це робите, але є наслідок: ви отримуєте <strong>поранення</strong>, відбувається <strong>ускладнення</strong>, ви маєте <strong>послаблений ефект</strong>, або опиняєтесь у <strong>безнадійних</strong> обставинах.",
+          "Fail": "Все йде погано. Ви отримуєте <strong>поранення</strong>, відбувається <strong>ускладнення</strong>, ви опиняєтесь у <strong>безнадійних</strong> обставинах, або <strong>втрачаєте цю можливість</strong>."
         },
         "Desperate": {
           "Critical": "Ви робите це з <strong>посиленим ефектом</strong>.",
-          "Success": "Ви робите це.",
-          "Mixed": "Ви це робите, але виникає <strong>серйозне ускладнення</strong>.",
-          "Fail": "Це найгірший результат."
+          "Success": "Ви це робите.",
+          "Mixed": "Ви це робите, але є наслідок: ви отримуєте <strong>серйозне поранення</strong>, відбувається <strong>серйозне ускладнення</strong>, ви маєте <strong>послаблений ефект</strong>.",
+          "Fail": "Це найгірший результат. Ви отримуєте <strong>серйозне поранення</strong>, відбувається <strong>серйозне ускладнення</strong>, ви <strong>втрачаєте можливість</strong> для дії."
         }
       },
       "Resistance": {
@@ -376,7 +376,7 @@
         "Overindulgence": "<p>Ви <strong>зловживаєте</strong>. Зніміть <strong>весь стрес</strong> і виберіть <strong>один</strong> із наступних наслідків:</p>",
         "Trouble": "<li><strong>Влипнути в халепу.</strong> Виберіть або киньте додаткове <strong>хитросплетіння.</strong></li>",
         "Brag": "<li><strong>Вихваляєтесь</strong> своїми досягненнями. <strong>+2 Палево</strong></li>",
-        "Lost": "<li><strong>Зникнення.</strong> Ваш персонаж зникає на кілька тижнів. Грайте іншим персонажем, поки цей не повернеться зі своєї гульні. Коли персонаж повертається, всі його травми також вилікувані.</li>",
+        "Lost": "<li><strong>Зникнення.</strong> Ваш персонаж зникає на кілька тижнів. Грайте іншим персонажем, поки цей не повернеться зі своєї гульні. Коли персонаж повертається, всі його поранення також вилікувані.</li>",
         "Trapped": "<li><strong>Відрізаний.</strong> Ваш теперішній постачальник більше не надає вам послуг. Знайдіть нове джерело для свого пороку.</li>"
       }
     },
@@ -397,11 +397,10 @@
         "NotSupported": "Предмет <b>{item}</b> не може бути доданий."
       },
       "Actor": {
-        "ExistsId": "Персонаж із таким самим id вже існує.",
-        "ExistsName": "Персонаж із таким самим іменем вже існує.",
-        "InPack": "Можна додати лише друзів.",
-        "NotSupported": "Персонаж <b>{type} {actor}</b> не може бути доданий.",
-        "NotExist": "Персонаж <b>{type} {actor}</b> не існує."
+        "ExistsId": "Елемент із таким самим ідентифікатором вже існує в контейнері.",
+        "ExistsName": "Елемент із таким самим ім'ям вже існує в контейнері.",
+        "InPack": "Ви можете додати Друзів до Персонажа, тільки якщо вони існують у світі.",
+        "NotSupported": "<b>{type} {actor}</b> не може бути доданий до цього контейнера."
       }
     }
   }
